@@ -1,6 +1,6 @@
 DIST xstream-distribution-1.2.1-src.zip 5344441 RMD160 69f1542abbb806f5befe4e2e48388dbd181166bf SHA1 10670cc33e43ff42d56348d04367857ac2276376 SHA256 739d33c5c95e6da0e81b83c0f0174db77da004fb32179ed9f8be6ec5ad3d68ef
 DIST xstream-distribution-1.3.1-src.zip 7505723 RMD160 01b0993881adc569d16fbb7df72def0046f44258 SHA1 7eace8ba0cc4c3cd7d5d8d31bc394b5b28613ed8 SHA256 df645ea4e2e16c4a149fb45966ea50d48b54776ead4727837348195daad94f6b
 EBUILD xstream-1.2.1.ebuild 1544 RMD160 e1adcf08af876106fb0354a0cda1dcbd0592635e SHA1 0fffa8ef23c91d2a01985f48a10069d08641b394 SHA256 428a6538b5abf78ddb37ea5512bbe61eba11a6132f44b6ee8cce965314552898
-EBUILD xstream-1.3.1.ebuild 1704 RMD160 e4e4c6ab27cfb7048b6916d6c0584f3b46b18a96 SHA1 b6be89befd8ad6fbde86b907fa75e015933bced7 SHA256 318509f8ffa588216f7606b28ca84a82f01e4a4780eb3b19f51d84119bf31a57
-MISC ChangeLog 1262 RMD160 9d95d12727831c3a10f893a7aa1d2e7845832925 SHA1 e95feb402fd206063a55544ad42737b6de460843 SHA256 8c9567bdae847963458d6ccfd80452a4bc03dda6bdf3486b1533f0868f4a590c
+EBUILD xstream-1.3.1.ebuild 1535 RMD160 66a2a0943ccc5ae849f3b01f7648108e390c2905 SHA1 0c99e1ba1925e5c397b99e377614beb67f10e778 SHA256 9c352f3530086bb7e02da642785f7abe7d2c5c80a7318042c7d3dcd565c4022c
+MISC ChangeLog 1398 RMD160 be78808e60809fe550513f66e9e731fb36c2c9f8 SHA1 01bd439db6eb00ef10b8aeaf5d75172f69fa3a02 SHA256 99b8d5635f3040934a254982108e610b5cf6ee80c904ca2f2b782d73050584b9
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
